--- a/contact/stylezzzz.css
+++ b/contact/stylezzzz.css
@@ -1,13 +1,14 @@
 * {
-    animation: fade 0.5s linear;
+
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    margin: 25px;
+    padding: 25px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
-    background: #3d688a;
+    background-image: url(../assets/error2.gif);
+    background-repeat: repeat;
 }
 
 .termsconditions {
@@ -81,11 +82,11 @@ body {
 
 .navbar {
     background: #242424d5;
-    height: 80px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.2rem;
+    font-size: 2.4rem;
     position: sticky;
     top: 0;
     z-index: 999;
@@ -333,7 +334,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 50%;
+    width: 100px;
 
     height: auto;
     filter: invert(98%) sepia(1%) saturate(1800%) hue-rotate(315deg) brightness(93%) contrast(89%);
@@ -346,7 +347,7 @@ body {
 }
 
 .social_media {
-    max-width: 1000px;
+    max-width: 4000px;
     width: 100%;
 }
 
@@ -364,7 +365,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 240px;
+    width: 2400px;
 }
 
 #hidden_01 {
@@ -381,7 +382,7 @@ body {
         rgba(0, 0, 0, 0), 
         rgb(0, 0, 0)), 
         url(../assets/happyworker.png);
-        background-size: 100% 100%;
+        background-size: 2% 25%;
         align-items: center;
         justify-self: center;
         margin: 0 auto;
