--- a/corridor/style_1.css
+++ b/corridor/style_1.css
@@ -68,7 +68,12 @@ button:hover {
     opacity: 75%;
 }
 
-#calling:hover {
-    margin: 500px;
+#calling {
     font-size: 50px;
+    color:white;
+}
+
+#calling:hover {
+    font-size: 55px;
+    color:yellow;
 }
