--- a/corridor/style_2.css
+++ b/corridor/style_2.css
@@ -1,3 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color:beige;
+}
+
 .poem {
     margin: 50px 300px;
 }
@@ -22,12 +31,16 @@
 }
 
 .links a {
-    font-size: 100px;
+    font-size: 50px;
 }
 
 .links a:hover {
     color:white;
-    font-size: 125px;
+    font-size: 55px;
+}
+
+#true_link {
+    color:rgb(208, 188, 227)
 }
 
 #true_link:hover {
