--- a/gallery/style_three.css
+++ b/gallery/style_three.css
@@ -172,7 +172,7 @@ body {
 
 .main {
     background-image: linear-gradient(
-        rgba(0, 0, 0, 0.5), 
+        rgba(115, 55, 0, 0.5), 
         rgb(0, 0, 0));
 }
 
@@ -180,7 +180,7 @@ body {
     background-image: linear-gradient(
         rgba(0, 0, 0, 0), 
         rgb(0, 0, 0)), 
-        url(../assets/office.png);
+        url(../assets/background.jpg);
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: 100% 75%;
@@ -426,7 +426,17 @@ body {
 }
 
 .gallery_button {
+    opacity: 25%;
     flex: 1;
 
     border: none;
+}
+
+.gallery_button:hover {
+    animation: move 0.5s ease forwards;
+}
+
+@keyframes move {
+    0% {transform: scale(1);}
+    100% {transform: scale(1.25);}
 }
