further organisation changes

--- a/archives/2010s/corrupted/gallery.css
+++ b/archives/2010s/corrupted/gallery.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url(../assets/error2.gif);
+    background-image: url(../assets/corrupted/QzCKNTRd5v.gif);
     background-repeat: repeat;
 }
 
