--- a/archives/2010s/corrupted/2Fc2rlpXHjx.css
+++ b/archives/2010s/corrupted/2Fc2rlpXHjx.css
@@ -17,6 +17,8 @@ body {
     padding: 20px 20px;
 }
 
+/* Responsible for the hidden text interactions */
+
 .hidden {
     opacity: 0%;
 }
@@ -25,6 +27,8 @@ body {
     opacity: 100%;
     color: blue;
 }
+
+/* Styling for 'sea of links' */
 
 .links {
     background-color: black;
