--- a/archives/2010s/styles/contact.css
+++ b/archives/2010s/styles/contact.css
@@ -9,7 +9,7 @@
 body {
     background: #3d688a;
 }
-
+/* Terms & Conditions contents */
 .termsconditions {
     border: 1px solid #e5e2e2;
     background: #424141;
@@ -18,27 +18,6 @@ body {
     position: fixed;
     bottom:0;
     z-index: 999;
-}
-
-.slidenormal {
-    animation: slide 3s alternate linear;
-}
-
-.slidefast {
-    animation: slide 0.25s alternate linear;
-}
-
-.slideglitch {
-    animation: slideglitch 0.1s alternate-reverse infinite;
-}
-
-@keyframes slide {
-    0% {transform:translateY(600px)};
-    100% {transform:translateY(-600px)};
-}
-
-@keyframes slideglitch {
-    100% {transform:translateX(-300px)};
 }
 
 .termsconditions_container {
@@ -78,6 +57,31 @@ body {
     text-decoration: none;
     color: #f3f0f0;
 }
+
+/* Terms & Conditions animation variations */
+
+.slidenormal {
+    animation: slide 3s alternate linear;
+}
+
+.slidefast {
+    animation: slide 0.25s alternate linear;
+}
+
+.slideglitch {
+    animation: slideglitch 0.1s alternate-reverse infinite;
+}
+
+@keyframes slide {
+    0% {transform:translateY(600px)};
+    100% {transform:translateY(-600px)};
+}
+
+@keyframes slideglitch {
+    100% {transform:translateX(-300px)};
+}
+
+/* Navigation bar content */
 
 .navbar {
     background: #242424d5;
@@ -151,6 +155,8 @@ body {
     width: 100%;
 }
 
+/* Buttons */
+
 .button {
     display: flex;
     justify-content: center;
@@ -170,12 +176,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.main {
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0.5), 
-        rgb(0, 0, 0)), 
-        url(../assets/happyworker.png);
-}
+/* CSS for the top of the page */
 
 .forefront {
     background-image: linear-gradient(
@@ -210,6 +211,15 @@ body {
 
 .forefront_content h2 {
     color: #d7cece;
+}
+
+/* CSS for the main content */
+
+.main {
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.5), 
+        rgb(0, 0, 0)), 
+        url(../assets/happyworker.png);
 }
 
 .main_container {
@@ -278,6 +288,8 @@ body {
 .main_btn:hover:after {
     width:100%;
 }
+
+/* Footer contents */
 
 .footer_container {
     background-color: #353131;
@@ -367,6 +379,8 @@ body {
     width: 240px;
 }
 
+/* CSS for fading text */
+
 #hidden_01 {
     opacity: 0%;
 }
@@ -375,6 +389,7 @@ body {
     opacity: 100%;
 }
 
+/* CSS for page corruption */
 
 .main_none {
     background-image: linear-gradient(
