--- a/archives/2010s/styles/gallery.css
+++ b/archives/2010s/styles/gallery.css
@@ -10,75 +10,7 @@ body {
     background: #3d688a;
 }
 
-.termsconditions {
-    border: 1px solid #e5e2e2;
-    background: #424141;
-    height: 200px;
-    width: 100%;
-    position: fixed;
-    bottom:0;
-    z-index: 999;
-}
-
-.slidenormal {
-    animation: slide 3s alternate linear;
-}
-
-.slidefast {
-    animation: slide 0.25s alternate linear;
-}
-
-.slideglitch {
-    animation: slideglitch 0.1s alternate-reverse infinite;
-}
-
-@keyframes slide {
-    0% {transform:translateY(600px)};
-    100% {transform:translateY(-600px)};
-}
-
-@keyframes slideglitch {
-    100% {transform:translateX(-300px)};
-}
-
-.termsconditions_container {
-    display: flex;
-    padding: 25px 25px;
-}
-
-.termswarning {
-    color: #f3f0f0;
-    width: 75%;
-    margin-right: 5%;
-    flex-grow: 2;
-}
-
-.tcbuttons {
-    width: 25%;
-    flex-grow: 1;
-}
-
-.tcb_items {
-    list-style: none;
-}
-
-.tcb_item {
-    margin: 10px 0;
-    padding: 5px 5px;
-    text-align: center;
-    background-color: #3ca1f4;
-}
-
-.tcb_item:hover {
-    background-color: #3d688a;
-}
-
-.tcb_link {
-    font-size: 20px;
-    text-decoration: none;
-    color: #f3f0f0;
-}
-
+/* Navigation bar content */
 .navbar {
     background: #242424d5;
     height: 80px;
@@ -170,11 +102,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.main {
-    background-image: linear-gradient(
-        rgba(115, 55, 0, 0.5), 
-        rgb(0, 0, 0));
-}
+/* CSS for top of the page */
 
 .forefront {
     background-image: linear-gradient(
@@ -211,73 +139,6 @@ body {
     color: #d7cece;
 }
 
-.main_container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    justify-self: center;
-    margin: 0 auto;
-    height: 90vh;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 50px;
-
-}
-
-.main_content h1 {
-    font-size: 4rem;
-    color:#ec681b;
-}
-
-.main_content p {
-    margin-top: 1rem;
-    font-size: 2rem;
-    font-weight: 700;
-    color: #d7cece;
-}
-
-.main_btn {
-    margin-top: 2rem;
-    font-size: 1rem;
-    background-image: linear-gradient(to top, #cc2929 0%, #ed8b1c 100%);
-    padding: 14px 32px;
-    border: none;
-    border-radius: 4px;
-    color: #d7cece;
-    cursor: pointer;
-    position: relative;
-    transition: all 0.35s;
-    outline: none;
-}
-
-.main_btn a {
-    position: relative;
-    z-index: 2;
-    color: #d7cece;
-    text-decoration: none;
-}
-
-.main_btn:after {
-    position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background: #cc2929;
-    transition: all 0.35s;
-    border-radius: 4px;
-}
-
-.main_btn:hover {
-    color:#d7cece;
-}
-
-.main_btn:hover:after {
-    width:100%;
-}
-
 .footer_container {
     background-color: #353131;
     padding: 5rem 0;
@@ -286,6 +147,51 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+/* CSS for main gallery */
+
+.main {
+    background-image: linear-gradient(
+        rgba(115, 55, 0, 0.5), 
+        rgb(0, 0, 0));
+}
+
+.image_container {
+    display: flex;
+    padding: 100px 100px;
+}
+
+.image_child {
+    height: 500px;
+    flex: 2;
+    border: 2px solid white;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.image_child img {
+    object-fit: fill;
+    width: 100%;
+    height: 100%;
+}
+
+.gallery_button {
+    opacity: 25%;
+    flex: 1;
+
+    border: none;
+}
+
+.gallery_button:hover {
+    animation: move 0.5s ease forwards;
+}
+
+@keyframes move {
+    0% {transform: scale(1);}
+    100% {transform: scale(1.25);}
+}
+
+/* CSS for the footer */
 
 #footer_logo {
     color: #e1dbdb;
@@ -364,79 +270,4 @@ body {
     justify-content: space-between;
     align-items: center;
     width: 240px;
-}
-
-#hidden_01 {
-    opacity: 0%;
-}
-
-#hidden_01:hover {
-    opacity: 100%;
-}
-
-
-.main_none {
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0), 
-        rgb(0, 0, 0)), 
-        url(../assets/happyworker.png);
-        background-size: 100% 100%;
-        align-items: center;
-        justify-self: center;
-        margin: 0 auto;
-        height: 45vh;
-        z-index: 1;
-        width: 100%;
-        max-width: 1300px;
-        padding: 50px;
-}
-
-#tc_goner {
-    position:absolute;
-    top: 1400px;
-    left: 2500px;
-}
-
-@keyframes fade {
-    0% {
-        opacity: 0%;
-    }
-    100% {
-        opacity: 100%;
-    };
-}
-
-.image_container {
-    display: flex;
-    padding: 100px 100px;
-}
-
-.image_child {
-    height: 500px;
-    flex: 2;
-    border: 2px solid white;
-    margin-right: 20px;
-    margin-left: 20px;
-}
-
-.image_child img {
-    object-fit: fill;
-    width: 100%;
-    height: 100%;
-}
-
-.gallery_button {
-    opacity: 25%;
-    flex: 1;
-
-    border: none;
-}
-
-.gallery_button:hover {
-    animation: move 0.5s ease forwards;
-}
-
-@keyframes move {
-    0% {transform: scale(1);}
-    100% {transform: scale(1.25);}
 }
